--- a/README
+++ b/README
@@ -24,4 +24,4 @@ This module requires these other modules and libraries:
 
 COPYRIGHT AND LICENSE
 
-Copyright (C) 2012 Ohio-Pennsylvania Software, LLC. All rights reserved.
+Copyright (C) 2012, 2013 Bizowie. All rights reserved.
